--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,7 @@
 <body>
     
     <header class="navigation">
-        <h2 class="logo">Logo</h2>
-        <nav class="navigation">
-            <a href="index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Servies</a>
-            <a href="#">Contact</a>
-        </nav>
+        <h2 class="logo">Socket Server</h2>
         <button class="btnLogin-popup">Login</button>
     </header>
     <div class="wrapper">
